<resources>
    <string name="app_name">FastDoctor</string>
    <string name="pr_nom"> Prénom</string>
    <string name="nom"> Nom</string>
    <string name="cr_ation_du_compte">Création du compte</string>
    <string name="adresse"> Adresse</string>
    <string name="num_tel"> Num tel</string>
    <string name="e_mail"> E-mail</string>
    <string name="suivant"><![CDATA[Suivant >>]]></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prend_rdv">Prend RDV</string>
    <string name="nom_d_utilisateur">Nom d\'utilisateur</string>
    <string name="DateTime">--/--/---- --:--</string>
    <string name="text_de_post">Text de post ....</string>
    <string name="_10">10</string>
    <string name="_5">5</string>
    <string name="todo">TODO</string>
    <string name="tapper_votre_commentaire">Tapper votre commentaire ...</string>
    <string name="forum_g_neral"><![CDATA[Forum > Géneral]]></string>
    <string-array name="Specialites">
        <item>Genéral</item>
        <item>Cardiologie</item>
        <item>Dermatologie</item>
        <item>Dentaire</item>
    </string-array>
    <string-array name="Villes">
        <item>Tunis</item>
        <item>Ariana</item>
        <item>Ben Arous</item>
        <item>Manouba</item>
        <item>Nabeul</item>
        <item>Zaghouan</item>
        <item>Kairouan</item>
        <item>Gebes</item>
        <item>Sousse</item>
        <item>Seliana</item>
        <item>Jendouba</item>
        <item>Gbeli</item>
    </string-array>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="dc">Dc.</string>
    <string name="historique_rdv">Historique Rdv</string>
    <string name="spinner_title">spinner_title</string>
</resources>