<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpDoctor"
    android:orientation="vertical"
    android:background="@drawable/backg">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="5dp">
        <Button
            android:id="@+id/btn_back2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_back"
            android:background="#00ffffff"
            android:layout_marginBottom="3dp"
            android:layout_marginStart="8dp"
            android:transitionName="transition_back_btn2"/>
        <Button
            android:id="@+id/etat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/etat"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="-50dp"
            android:layout_gravity="center"
            android:text="1/2"
            android:fontFamily="@font/black_ops_one"
            android:textSize="25sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:orientation="vertical"
            android:background="@drawable/block_general"
            >

            <TextView
                android:layout_width="166dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/jockey_one"
                android:text="@string/cr_ation_du_compte"
                android:textColor="#000000"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/add_patient"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="right"
                android:layout_marginTop="-90dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/ic_add_doctor"
                android:contentDescription="@string/todo" />

            <View
                android:id="@+id/divider"
                android:layout_width="170dp"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:background="#AFA9AA" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center"
                android:hint="  N° CIN"
                android:textColorHint="#555454"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_cin"
                    android:textColor="#171717"
                    android:textColorLink="#070707"
                    android:textSize="16sp"
                    android:inputType="numberDecimal"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center"
                android:hint="@string/nom"
                android:textColorHint="#555454"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_stat_name"
                    android:textColor="#171717"
                    android:textColorLink="#070707"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Prenom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center"
                android:hint="@string/pr_nom"
                android:textColorHint="#555454"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#171717"
                    android:textColorLink="#070707"
                    android:textSize="16sp"
                    android:drawableStart="@drawable/ic_stat_name"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/adress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center"
                android:hint="@string/adresse"
                android:textColorHint="#555454"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#171717"
                    android:textColorLink="#070707"
                    android:textSize="16sp"
                    android:drawableStart="@drawable/ic_location"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center"
                android:hint="@string/num_tel"
                android:textColorHint="#555454"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#171717"
                    android:textColorLink="#070707"
                    android:textSize="16sp"
                    android:inputType="phone"
                    android:drawableStart="@drawable/ic_phone"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center"
                android:hint="@string/e_mail"
                android:textColorHint="#555454"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#171717"
                    android:textColorLink="#070707"
                    android:textSize="16sp"
                    android:inputType="textEmailAddress"
                    android:drawableStart="@drawable/ic_mail"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_signup_next2"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10dp"
                android:text="@string/suivant"
                android:elevation="5dp"
                android:onClick="callNextScreen2"
                android:transitionName="transition_next_btn2"/>


        </LinearLayout>


    </LinearLayout>
</ScrollView>