<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="5dp"
    android:paddingTop="3dp"
    android:background="#B0F1F1F1"
    app:layout_constraintCircleRadius="10dp">


    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c1c1c1"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/user_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_profil"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:src="@drawable/img_profil"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/nom_d_utilisateur"
                android:textColor="#0E0E0E"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/img_profil"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/DateTime_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="5dp"
                android:text="@string/DateTime"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_profil"
                app:layout_constraintTop_toBottomOf="@+id/username" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/post_reagir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="#fff">


            <TextView
                android:id="@+id/questionPost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_marginTop="40dp"
                android:text="@string/text_de_post"
                android:textColor="#151515"
                android:textSize="14sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.526"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="#c1c1c1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/questionPost" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="20dp"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:background="#fff"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider">

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginRight="20dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ToggleButton
                        android:id="@+id/click_jaime"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:background="@drawable/selector_favorit"
                        android:textOff=""
                        android:textOn="" />

                    <TextView
                        android:id="@+id/nbr_jaime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="20dp"
                        android:text="@string/_10"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/show_comments"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:orientation="horizontal"
                        android:paddingLeft="170dp">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/ic_comment"
                            android:layout_width="27dp"
                            android:layout_height="23dp"
                            android:background="@drawable/ic_comment"
                            android:clickable="true"
                            android:contentDescription="@string/todo" />

                        <TextView

                            android:id="@+id/nbr_comment"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="4dp"
                            android:layout_marginRight="5dp"
                            android:text="@string/_5"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/comment_list_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
                    app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
                    app:layout_constraintStart_toStartOf="@+id/linearLayout2"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout2">


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/comment_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"

                        />

                </LinearLayout>

                <View
                    android:id="@+id/divider3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#c1c1c1"
                    app:layout_constraintBottom_toBottomOf="@+id/comment_list_layout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <LinearLayout
                    android:id="@+id/linearLayout4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="7dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/img_profil-cmt"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="3dp"
                        android:src="@drawable/img_profil"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/edit_comment"
                            android:layout_width="210dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="5dp"
                            android:autofillHints=""
                            android:background="@drawable/card_comment"
                            android:hint="taper votre commentaire"
                            android:inputType="textMultiLine"
                            android:maxLines="5"
                            android:scrollbars="vertical"
                            android:textSize="13sp" />

                        <Button
                            android:id="@+id/send_comment"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_gravity="bottom"
                            android:layout_marginStart="2dp"
                            android:background="@drawable/ic_send"
                            android:clickable="true"
                            android:elevation="4dp" />

                    </LinearLayout>

                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c1c1c1"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

</androidx.constraintlayout.widget.ConstraintLayout>